Fixing the path to bg image on smaller screens

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -4511,7 +4511,7 @@ time.icon span {
 
   .bg-gradient-water-savings-primary{
     background: #002a5a;
-    background: url(https://static.aesseal.com/graphics/banners/WaterSavingsWebinar_promo2-sm.webp), linear-gradient(180deg, rgba(62, 91, 125, 1) 0%, rgba(0, 42, 90, 1) 40%);
+    background: url(https://static.aesseal.com/graphics/banners/WaterSavingsWebinar_promo-sm.webp), linear-gradient(180deg, rgba(62, 91, 125, 1) 0%, rgba(0, 42, 90, 1) 40%);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center top;
@@ -4851,7 +4851,7 @@ time.icon span {
 
   .bg-gradient-water-savings-primary{
     background: #002a5a;
-    background: url(https://static.aesseal.com/graphics/banners/WaterSavingsWebinar_promo2-sm.webp), linear-gradient(180deg, rgba(62, 91, 125, 1) 0%, rgba(0, 42, 90, 1) 40%);
+    background: url(https://static.aesseal.com/graphics/banners/WaterSavingsWebinar_promo-sm.webp), linear-gradient(180deg, rgba(62, 91, 125, 1) 0%, rgba(0, 42, 90, 1) 40%);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center top;
